Make changes in Trigger related entities and fix tests